[GStreamer][Debug] mediarecorder tests hitting ASSERT https://bugs.webkit.org/show_bug.cgi?id=255786

Reviewed by Xabier Rodriguez-Calvar.

The MediaStream GStreamer source element now stops observation of its InternalSources from the
dispose function, in order to avoid potentially unsafe behaviours when the element is used from a
non-main thread, such as the one created by GstTranscoder.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcDispose):
(webkitMediaStreamSrcChangeState):

Canonical link: https://commits.webkit.org/263305@main